[gd_scene load_steps=2 format=3 uid="uid://cu7uwv4bp6qlv"]

[ext_resource type="Script" uid="uid://6gwwgwyw8h0j" path="res://addition.gd" id="1_roahm"]

[node name="Addition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_roahm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.955559, 0.937301, 0.898201, 1)
metadata/_edit_use_anchors_ = true

[node name="Text" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.236111
anchor_top = 0.037037
anchor_right = 0.763889
anchor_bottom = 0.473765
offset_bottom = -234.0
text = "जोड़ना गणित का शुरुआती बिंदु है। जोड़ने को समझने के लिए, आपको गिनना आना चाहिए।कुछ लोग 0 से शुरू करते हैं, जो कुछ नहीं है, लेकिन ज्यादातर लोग 1 से शुरू करते हैं।

1, 2, 3, 4, 5, 6, 7, 8, 9, 10

जब आप 9 को पार कर लें, तो 1 पर वापस जाएं और 0 जोड़ें, फिर ऊपर जाते रहें और जोड़ते रहें।

11, 12, 13, 14, 15, 16, 17, 18, 19, 20

नीचे प्रयास करें!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Box1" type="TextEdit" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361111
anchor_top = 0.580247
anchor_right = 0.416667
anchor_bottom = 0.679012
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "0"
metadata/_edit_use_anchors_ = true

[node name="Plus" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_left = 0.416667
anchor_top = 0.580247
anchor_right = 0.472222
anchor_bottom = 0.679012
theme_override_font_sizes/font_size = 40
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Box2" type="TextEdit" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.472222
anchor_top = 0.580247
anchor_right = 0.527778
anchor_bottom = 0.679012
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "0"
metadata/_edit_use_anchors_ = true

[node name="Equals" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_left = 0.527778
anchor_top = 0.580247
anchor_right = 0.583333
anchor_bottom = 0.679012
theme_override_font_sizes/font_size = 40
text = "="
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Result" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_left = 0.583333
anchor_top = 0.580247
anchor_right = 0.638889
anchor_bottom = 0.679012
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Add" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361111
anchor_top = 0.716049
anchor_right = 0.638889
anchor_bottom = 0.777778
text = "जोड़ें"
metadata/_edit_use_anchors_ = true

[node name="Reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 0.790123
anchor_right = 0.5625
anchor_bottom = 0.851852
text = "रीसेट करें"
metadata/_edit_use_anchors_ = true

[node name="NextPage" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.861111
anchor_top = 0.91358
anchor_right = 0.986111
anchor_bottom = 0.975309
text = "अगली पृष्ठ"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="NextPage" to="." method="_on_next_page_pressed"]
